force-app/main/default/objects/Contact_Activity__c/Contact_Activity__c.object-meta.xml
<CustomObject>
    <label>Contact Activity</label>
    <nameField>
        <displayFormat>CA-{00000}</displayFormat>
        <label>Contact Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>