force-app/main/default/objects/Contact_Activity__c/fields/Customer_Activity__c.field-meta.xml
<CustomField>
    <fullName>Customer_Activity__c</fullName>
    <label>Customer Activity</label>
    <referenceTo>Customer_Activity__c</referenceTo>
    <relationshipLabel>Contact Activities</relationshipLabel>
    <relationshipName>Contact_Activities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>